# social-media-data-preprocessing

./: pyproject.toml
outputs/: normalized_filtered_data_test100.jsonl  normalized_filtered_data_test100_0.jsonl  normalized_filtered_data_test100_2.jsonl
src/: main.py
src/data/comment/: daiphatthanh_comments.json  day1000_comments.json  theanh_comments.json
src/data/filtered/: daiphatthanh.json  day.json  filtered_data.json  theanh.json  thread.json  titok.json
src/data/post/: daiphatthanh_100_posts.json  day_1000_100_posts.json  theanh28_100_posts.json
src/data/vilexnorm/: ViLexNorm_dev.json  ViLexNorm_test.json  ViLexNorm_train.json
src/normalize/: config.py  data_loader.py  inference.py
src/notebooks/: Vietnamese_utils.py  data.ipynb  fb_api.ipynb  phonology_convertion.py  preprocess.ipynb  qwen.ipynb
