[project]
name = "crawl-fb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "langdetect>=1.0.9",
    "openai>=2.33.0",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
]
